<resources>
    <string name="app_name">AISnapTutor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtContain">This action may contain Ads</string>
    <string name="txtRemoveAd">Remove Ad</string>
    <string name="txtAppLanguage">App Language</string>
    <string name="txtShareApp">Share App</string>
    <string name="txtPrivacyPolicy">Privacy Policy</string>
    <string name="txtRateApp">Rate App</string>
    <string name="txtMoreApp">More App</string>
    <string name="btn_save">Save</string>
    <string name="txtForward">Forward</string>
    <string name="txtCopy">Copy Text</string>
    <string name="txtOpenInDefault">Open in default browser</string>
    <string name="txtShare">Share</string>
    <string name="txtSave">Save</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtGallery">Gallery</string>
    <string name="txtFlash">Flash</string>
    <string name="txtDone">Done</string>
    <string name="txtCropRotate"><![CDATA[Crop & Rotate]]></string>
    <string name="txtCollection">Collection</string>
    <string name="txtSelectLang">Select Language</string>
    <string name="txtWatchAd">Watch ad</string>
    <string name="txtWatchAd1">You have to watch the reward ads to see the result.</string>
    <string name="spanish">Spanish</string>
    <string name="txtAsk">Ask me anything…</string>
    <string name="txtCrop">Crop</string>
    <string name="txtRotate">Rotate</string>
    <string name="txtExitApp">Exit App</string>
    <string name="txtAreSure">Are you sure you want to exit?</string>
</resources>